# scipylat2021-org

./: README.md
.github/ISSUE_TEMPLATE/: budget.md  meeting.md  social-media.md  task.md
email-marketing/: .env-example  README.md  email-campaign-send.py  pyproject.toml
email-marketing/email_templates/: invite.html
programacao/: .gitignore  README.md  programacao.json
programacao/arts/: generate_banners.py  pyproject.toml
programacao/programacao/: .gitignore  generate-schedule.py  pyproject.toml
roteiros/: charla-transmision-en-vivo.md  palestra-transmissao-ao-vivo.md
